--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,24 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "typecheck": "astro check",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:report": "playwright show-report"
+    "test:e2e:report": "playwright show-report",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx,.svelte,.astro",
+    "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx,.svelte,.astro --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "astro": "^5.13.5",
-    "svelte": "^5.14.3"
+    "svelte": "^5.14.3",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@astrojs/svelte": "^7.0.0",
@@ -26,6 +33,18 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
-    "jsdom": "^24.1.0"
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "astro-eslint-parser": "^0.16.3",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "jsdom": "^24.1.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-svelte": "^3.2.1",
+    "svelte-eslint-parser": "^0.33.1"
   }
 }
