--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,31 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+bun.lockb
+bun-debug.log*
+bun-error.log*
 
+# Dependencies and caches
 node_modules
-dist
-dist-ssr
+**/.astro
+**/.cache
+
+# Build outputs
+**/dist
+**/dist-ssr
+src-tauri/target/
+target/
+*.dSYM
+
+# Test and coverage outputs
+frontend/playwright-report/
+frontend/test-results/
+**/coverage/
+
+# Local env and misc
 *.local
+.env
+.env.*.local
 
 # Editor directories and files
 .vscode/*
