--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,21 +1,25 @@
 # build output
 dist/
-# generated types
+playwright-report/
+test-results/
+coverage/
+
+# generated types and caches
 .astro/
+.cache/
 
 # dependencies
 node_modules/
 
 # logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
+bun.lockb
+*.log
+bun-debug.log*
+bun-error.log*
 
 # environment variables
 .env
-.env.production
+.env.*
 
 # macOS-specific files
 .DS_Store
