fix: Auto-create iOS release tag when desktop release is pushed
Adds automatic iOS tag creation to release.yml workflow:
- When v* desktop tag is pushed, workflow now creates ios-v* tag
- iOS tag automatically triggers ios-release.yml for TestFlight build
- Uses safe environment variables to prevent command injection
- Configures git credentials for tag creation

This eliminates the manual step of pushing ios-v* tags separately.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,27 @@ jobs:
       version: ${{ steps.get_version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get version from tag
         id: get_version
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Configure git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Create iOS release tag
+        env:
+          VERSION: ${{ steps.get_version.outputs.version }}
+        run: |
+          TAG_NAME="ios-v${VERSION}"
+          git tag "$TAG_NAME" HEAD
+          git push origin "$TAG_NAME"
+          echo "Created iOS release tag: $TAG_NAME"
 
       - name: Create Release
         id: create_release
