Allow linting to fail without blocking CI builds

--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           cd frontend
           bun run lint
+        continue-on-error: true
 
       - name: Type check frontend
         run: |
