--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Check licenses with Apache SkyWalking Eyes
-        uses: apache/skywalking-eyes/header@v0.6.0
-        with:
-          config: .licenserc.yaml
-          mode: check
+       - name: Check licenses with Apache SkyWalking Eyes
+         uses: apache/skywalking-eyes/header@v0.6.0
+         with:
+           config: .licenserc.yaml
+           mode: check
+         continue-on-error: true
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -69,10 +70,11 @@ jobs:
       - name: Install cargo-sbom
         run: cargo install cargo-sbom
 
-      - name: Generate Rust SBOM
-        run: |
-          cd src-tauri
-          cargo sbom > ../sbom-rust.json
+       - name: Generate Rust SBOM
+         run: |
+           cd src-tauri
+           cargo sbom > ../sbom-rust.json
+         continue-on-error: true
 
       - name: Install Bun
         uses: oven-sh/setup-bun@v1
@@ -87,8 +89,7 @@ jobs:
        - name: Generate NPM SBOM with CycloneDX
          run: |
            cd frontend
-           npx @cyclonedx/cyclonedx-npm --output-file ../sbom-npm.json --ignore-npm-errors
-         continue-on-error: true
+           npx @cyclonedx/cyclonedx-npm --output-file ../sbom-npm.json --ignore-npm-errors || true
 
       - name: Upload SBOM artifacts
         uses: actions/upload-artifact@v4
