--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -77,65 +77,10 @@ jobs:
           cargo clippy --all-targets --all-features
         continue-on-error: true
 
-  test-coverage:
-    name: Test Coverage
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install cargo-tarpaulin
-        run: cargo install cargo-tarpaulin
-
-      - name: Cache Rust dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            src-tauri/target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-            frontend/node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-       - name: Install frontend dependencies
-         run: |
-           cd frontend
-           bun install
-
-       - name: Run Rust tests with coverage
-         run: |
-           cd src-tauri
-           cargo tarpaulin --out Xml --output-dir ../coverage
-         continue-on-error: true
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage/cobertura-coverage.xml
-          flags: rust
-          name: rust-coverage
+   # test-coverage:
+   #   name: Test Coverage
+   #   runs-on: ubuntu-latest
+   #   Temporarily disabled due to cargo-tarpaulin issues
 
   build-check:
     name: Build Verification
@@ -214,6 +159,7 @@ jobs:
      name: Quality Gate Summary
      runs-on: ubuntu-latest
      needs: [code-quality, build-check]
+     # needs: [code-quality, test-coverage, build-check]  # test-coverage temporarily disabled
      steps:
        - name: Quality gate summary
          run: |
