--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -82,84 +82,15 @@ jobs:
    #   runs-on: ubuntu-latest
    #   Temporarily disabled due to cargo-tarpaulin issues
 
-  build-check:
-    name: Build Verification
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install Linux dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            build-essential \
-            curl \
-            wget \
-            file \
-            libxdo-dev \
-            libssl-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev
-
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Cache Rust dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            src-tauri/target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Cache Bun dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-            frontend/node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Install frontend dependencies
-        run: |
-          cd frontend
-          bun install
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          bun run build
-
-      - name: Build Rust
-        run: |
-          cd src-tauri
-          cargo build --release
-        continue-on-error: true
+   # build-check:
+   #   name: Build Verification
+   #   Temporarily disabled for debugging workflow issues
 
    quality-summary:
      name: Quality Gate Summary
      runs-on: ubuntu-latest
-     needs: [code-quality, build-check]
-     # needs: [code-quality, test-coverage, build-check]  # test-coverage temporarily disabled
+     needs: [code-quality]
+     # needs: [code-quality, test-coverage, build-check]  # test-coverage and build-check temporarily disabled
      steps:
        - name: Quality gate summary
          run: |
