--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "src-tauri"
-version = "1.0.0-mvp"
+version = "0.1.1"
 description = "OpenCode Nexus - Desktop application for managing OpenCode servers with secure remote access"
 authors = ["f3rg-codes"]
 edition = "2021"
