--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -83,14 +83,17 @@ jobs:
         run: |
           cargo install tauri-cli --version "^2" --locked
 
-      - name: Setup iOS build environment
-        run: |
-          cd src-tauri
-          cargo tauri ios init
+       - name: Setup iOS build environment
+         run: |
+           cd src-tauri
+           cargo tauri ios init
 
-          cd gen/apple
-          pod install --repo-update || pod install
-          cd ../../..
+           cd gen/apple
+           # Remove macOS target from Podfile since we're only building for iOS
+           sed -i.bak '/target.*macOS/,/end/d' Podfile
+           sed -i.bak '/MACOSX_DEPLOYMENT_TARGET/d' Podfile
+           pod install --repo-update || pod install
+           cd ../../..
 
       - name: Setup code signing
         env:
