fix: correct sed commands for Podfile macOS target removal
- Change sed pattern from '/target.*macOS/,/end/d' to '/target.*macOS/,/^end$/d'
- This ensures only the macOS target block is removed, not partial matches
- Fixes the Podfile parsing error that was causing iOS build failures

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -90,7 +90,7 @@ jobs:
 
            cd gen/apple
            # Remove macOS target from Podfile since we're only building for iOS
-           sed -i.bak '/target.*macOS/,/end/d' Podfile
+           sed -i.bak '/target.*macOS/,/^end$/d' Podfile
            sed -i.bak '/MACOSX_DEPLOYMENT_TARGET/d' Podfile
            pod install --repo-update || pod install
            cd ../../..
