fix: add Xcode workspace file for Xcode Cloud compatibility
- Create src-tauri.xcworkspace with contents.xcworkspacedata
- Update .gitignore to allow workspace file while ignoring other gen files
- Fixes 'Workspace does not exist' error in Xcode Cloud

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ node_modules
 **/dist-ssr
 src-tauri/target/
 src-tauri/gen/
+!src-tauri/gen/apple/src-tauri.xcworkspace/
 target/
 *.dSYM
 frontend/playwright-report/
