--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "src-tauri"
-version = "0.1.1"
+version = "0.1.3"
 description = "OpenCode Nexus - Desktop application for managing OpenCode servers with secure remote access"
 authors = ["f3rg-codes"]
 edition = "2021"
@@ -33,7 +33,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
 anyhow = "1"
 dirs = "5"
 argon2 = "0.5"
