feat: enhance iOS development setup with Tauri v2 optimizations
- Add comprehensive iOS development scripts to package.json
- Update iOS configuration with modern Tauri v2 features and privacy settings
- Enhance mobile development server with security headers
- Add iOS-specific environment configuration (.env.ios)
- Optimize Cargo.toml with iOS-specific release profile
- Add iOS testing scripts to frontend package.json
- Implement Apple privacy manifest compliance
- Synchronize version to 0.1.3 across all configurations

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:report": "playwright show-report",
+    "test:ios": "playwright test --project=ios",
+    "test:ios:headed": "playwright test --project=ios --headed",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx,.svelte,.astro --max-warnings 2000",
     "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx,.svelte,.astro --fix",
     "format": "prettier --write .",
