--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "cd frontend && bun run build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "ios:dev": "tauri ios dev",
+    "ios:build": "tauri ios build",
+    "ios:build:release": "tauri ios build --release",
+    "ios:init": "tauri ios init",
+    "ios:open": "open src-tauri/gen/apple/src-tauri.xcodeproj"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
