--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,6 +58,7 @@ futures-util = "0.3"
 futures = "0.3"
 sysinfo = "0.30"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest-eventsource = "0.5"
 # Note: Frontend now uses @opencode-ai/sdk directly for all chat operations
 
 # Development dependencies for better debugging
