fix(ci): add missing runs-on for build-test job in test-backend.yml
The build-test job was using matrix.os but matrix only had target defined.
Changed to use macos-latest directly.

--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -158,7 +158,7 @@ jobs:
 
   build-test:
     name: Build Test
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
 
     
     strategy:
@@ -169,7 +169,6 @@ jobs:
     
     steps:
       - name: Display Cost Warning for macOS
-        if: contains(matrix.os, 'macos-14')
         run: |
           echo "::warning::Running on GitHub-hosted macOS runner"
           echo ""
