--- a/frontend/Dockerfile.e2e
+++ b/frontend/Dockerfile.e2e
@@ -3,6 +3,9 @@ FROM mcr.microsoft.com/playwright:v1.48.0-focal
 
 WORKDIR /app
 
+# Install unzip (required for bun installer)
+RUN apt-get update && apt-get install -y unzip && rm -rf /var/lib/apt/lists/*
+
 # Copy package files
 COPY package.json bun.lock* ./
 
