fix: install XcodeGen directly to avoid brew dependency

--- a/.github/workflows/ios-build-enhanced.yml
+++ b/.github/workflows/ios-build-enhanced.yml
@@ -308,12 +308,28 @@ jobs:
             rm -rf gen/apple
           fi
           
-          # Initialize iOS project
-          echo "Initializing iOS project..."
-          cargo tauri ios init || {
-            echo "❌ Failed to initialize iOS project"
-            exit 1
-          }
+           # Install XcodeGen directly (avoid brew dependency)
+           echo "📦 Installing XcodeGen..."
+           XCODEGEN_URL="https://github.com/yonaskolb/XcodeGen/releases/download/2.44.1/xcodegen.zip"
+           curl -L "$XCODEGEN_URL" -o xcodegen.zip
+           unzip -q xcodegen.zip
+           chmod +x xcodegen
+           sudo mv xcodegen /usr/local/bin/ || mv xcodegen /usr/local/bin/
+           rm xcodegen.zip
+
+           # Verify XcodeGen installation
+           if ! command -v xcodegen &> /dev/null; then
+             echo "❌ XcodeGen installation failed"
+             exit 1
+           fi
+           echo "✅ XcodeGen installed: $(xcodegen --version)"
+
+           # Initialize iOS project
+           echo "Initializing iOS project..."
+           cargo tauri ios init || {
+             echo "❌ Failed to initialize iOS project"
+             exit 1
+           }
           
           # Create directory structure
           echo "Creating Externals directory structure..."
