fix: remove XcodeGen installation from workflows (now pre-installed on runner)

--- a/.github/workflows/ios-build-enhanced.yml
+++ b/.github/workflows/ios-build-enhanced.yml
@@ -308,11 +308,7 @@ jobs:
             rm -rf gen/apple
           fi
           
-           # Install XcodeGen via Homebrew (if not already installed)
-           if ! command -v xcodegen &> /dev/null; then
-             echo "📦 Installing XcodeGen via Homebrew..."
-             brew install xcodegen
-           fi
+           # XcodeGen is pre-installed on runner via brew
            echo "✅ XcodeGen ready: $(xcodegen --version)"
 
            # Initialize iOS project
