--- a/.github/workflows/ios-release-optimized.yml
+++ b/.github/workflows/ios-release-optimized.yml
@@ -103,8 +103,7 @@ jobs:
         run: |
           echo "🔍 Checking Tauri CLI installation..."
           if command -v cargo-tauri >/dev/null 2>&1; then
-            TAURI_VERSION=$(cargo tauri --version 2>/dev/null || echo "Unknown")
-            echo "✅ Tauri CLI already installed: $TAURI_VERSION"
+            echo "✅ Tauri CLI is available"
           else
             echo "❌ Tauri CLI not found - this should not happen on self-hosted runner"
             exit 1
