--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ debug = true
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "src_tauri_lib"
+path = "src/lib.rs"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -57,7 +58,8 @@ futures-util = "0.3"
 futures = "0.3"
 sysinfo = "0.30"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
- # Note: Frontend now uses @opencode-ai/sdk directly for all chat operations
+reqwest-eventsource = "0.5"
+# Note: Frontend now uses @opencode-ai/sdk directly for all chat operations
 
 # Development dependencies for better debugging
 [dev-dependencies]
