--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -50,7 +50,7 @@ jobs:
       
       - name: Run unit tests
         working-directory: ./frontend
-        run: bun test --coverage
+        run: bun test src/tests --coverage
       
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
