--- a/.github/workflows/ios-release-optimized.yml
+++ b/.github/workflows/ios-release-optimized.yml
@@ -1,13 +1,13 @@
 name: iOS TestFlight Release (Clean)
 
+# DISABLED: Use ios-build-enhanced.yml instead
+# To re-enable, change 'never-trigger' back to 'main'
 on:
   push:
     tags:
       - 'ios-v*'
     branches:
-      - 'main'
-      - 'test-ios-build'
-      - 'release'
+      - 'never-trigger'
   workflow_dispatch:
     inputs:
       upload_to_testflight:
@@ -47,7 +47,7 @@ jobs:
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '26.0'
+          xcode-version: '15.4'
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -65,6 +65,24 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
+      - name: Setup Homebrew and dependencies
+        run: |
+          # Ensure homebrew is in PATH for self-hosted runner
+          eval "$(/opt/homebrew/bin/brew shellenv)" || eval "$(/usr/local/bin/brew shellenv)" || true
+          echo "$(brew --prefix)/bin" >> $GITHUB_PATH
+          
+          # Install xcodegen if not present
+          if ! command -v xcodegen &> /dev/null; then
+            echo "Installing xcodegen..."
+            brew install xcodegen
+          fi
+          
+          # Install cocoapods if not present
+          if ! command -v pod &> /dev/null; then
+            echo "Installing cocoapods..."
+            brew install cocoapods
+          fi
 
       - name: Setup caching
         uses: actions/cache@v4
