--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -65,11 +65,9 @@ jobs:
         run: |
           echo "🧹 Cleaning up disk space before Docker build..."
           # Remove old Docker images and containers
-          docker system prune -af --volumes
+          docker system prune -af --volumes || true
           # Clean package manager cache
-          rm -rf ~/.npm ~/.cache ~/.cargo/registry/cache
-          # Remove large temporary files
-          find /tmp -name "*.tmp" -o -name "*.log" -mtime +7 -delete
+          rm -rf ~/.npm ~/.cache ~/.cargo/registry/cache 2>/dev/null || true
           # Show available space
           df -h
 
@@ -143,11 +141,9 @@ jobs:
       - name: Clean up before Docker build
         run: |
           echo "🧹 Cleaning up Docker environment..."
-          docker system prune -af --volumes
+          docker system prune -af --volumes || true
           # Remove large cache directories
-          rm -rf ~/.npm ~/.cache ~/.cargo/registry/cache
-          # Clean tmp
-          find /tmp -name "*.tmp" -o -name "*.log" -mtime +1 -delete
+          rm -rf ~/.npm ~/.cache ~/.cargo/registry/cache 2>/dev/null || true
           df -h
 
       - name: Build test images
