feat: implement industry-standard iOS credentials management
- Add .credentials.example template for API credentials
- Create setup-ios-credentials.sh automation script
- Update .gitignore to prevent credential commits
- Add .credentials/README.md with setup instructions
- Fix iOS build configuration for TestFlight uploads
- Update version to 0.1.30 for TestFlight compatibility
- Configure proper provisioning profile and certificate settings

Security improvements:
- Never commit secrets to git
- Use secure local credential storage
- Automated credential verification
- Industry-standard setup procedures

TestFlight ready with proper certificate/profile alignment.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,13 @@ frontend/test-results/
 *.local
 .env
 .env.*.local
+
+# iOS/macOS credentials (never commit)
+.credentials/
+*.p12
+*.p8
+*.mobileprovision
+AuthKey_*.p8
 .vscode/*
 !.vscode/extensions.json
 .idea
